--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
   },
   "dependencies": {
     "@react-native-community/hooks": "^3.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/native": "^6.1.18",
+    "@types/react": "~18.2.79",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.19.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
